--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-confetti": "^2.0.1",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
