--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/overpass": "^5.0.19",
 		"@fontsource/comic-neue": "^5.0.12"
 	}
 }
